discussion/kv_engine/128642/128642_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Relocate server_stats for later use

Pulling server_stats out of protocol/mcbp as it will be needed for
Prometheus in a later patch. No functional change, just tidying up.

Change-Id: Iddc9822655decf84b46f85ca1f9e472ce0a15c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-27 15:06:42.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-27 15:09:25.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2442/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34: error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
STAT(ep_num_ops_get_meta, count, num_ops, {{"op", "get_meta"}})
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2442/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2442/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24280/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24280/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/958/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
